--- a/skeleton/api-spec-config.yaml
+++ b/skeleton/api-spec-config.yaml
@@ -1,32 +1,13 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: ${{values.component_id | dump}}-api
-  description: Retrieve artist details
+  name: ${{values.component_id | dump}}
+  {%- if values.description %}
+  description: ${{values.description | dump}}
+  {%- endif %}
 spec:
   type: openapi
   lifecycle: production
   owner: ${{values.owner | dump}}
-  definition: |
-    openapi: "3.0.0"
-    info:
-      version: 1.0.0
-      title: Artist API
-      license:
-        name: MIT
-    servers:
-      - url: http://artist.spotify.net/v1
-    paths:
-      /artists:
-        get:
-          summary: List all artists
-          description: Optional extended description in CommonMark or HTML.
-          responses:
-            '200':    # status code
-              description: A JSON array of artist names
-              content:
-                application/json:
-                  schema: 
-                    type: array
-                    items: 
-                      type: string
+  definition:
+    $text: https://github.com/${{values.destination.repo}}/blob/master/swagger.yaml
